@@ -11,6 +11,7 @@ README.mkdn
 SIGNATURE
 lib/Dancer/Plugin/Cache/CHI.pm
 t/00-compile.t
+t/000-report-versions-tiny.t
 t/TestApp.pm
 t/basic.t
 t/honor-no-cache.t
