@@ -8,6 +8,7 @@ Revision history for Dancer::Plugin::Cache::CHI
  [DOCUMENTATION]
 
  [ENHANCEMENTS]
+ - Now Dancer 2 compatible.
 
  [NEW FEATURES]
 
